# magisterka

./: .gitignore  CMakeLists.txt  blender_render_frame.py  config.txt  run_all_configs.bat  scene.blend
configs/: config_1.txt  config_10.txt  config_1_base.txt  config_2.txt  config_3.txt  config_4.txt  config_5.txt  config_6.txt  config_7.txt  config_8.txt  config_9.txt
data/config_1/: config_1.txt
data/config_2/: config_2.txt
data/config_3/: config_3.txt
data/config_4/: config_4.txt
data/config_5/: config_5.txt
data/config_6/: config_6.txt
data/config_7/: config_7.txt
data/config_test/: config_test.txt
src/: main.cpp
src/simulation/: ExplosionSimulation.cpp  ExplosionSimulation.h  Vortex.cpp  Vortex.h
src/simulation/source/: FluidSource.cpp  FluidSource.h
src/simulation/vortex/: VerticesList.cpp  VerticesList.h  Vortex.cpp  Vortex.h
src/simulation/wavelet/: EIGENVALUE_HELPER.h  FLUID_3D.cpp  FLUID_3D.h  FLUID_3D_SOLVERS.cpp  FLUID_3D_STATIC.cpp  IMAGE.h  INTERPOLATE.h  LU_HELPER.h  MERSENNETWISTER.h  OBSTACLE.h  SPHERE.cpp  SPHERE.h  VEC3.h  WAVELET_NOISE.h  WTURBULENCE.cpp  WTURBULENCE.h  wavelet_main.h
src/simulation/wavelet/tnt/: jama_eig.h  jama_lu.h  tnt_array1d.h  tnt_array2d.h  tnt_i_refvec.h  tnt_math_utils.h
src/utils/: BlenderExport.h  Config.cpp  Config.h  ExternalRenderer.cpp  ExternalRenderer.h  GeometryUtils.h  LinkedList.h  LinkedListNode.h  Logger.cpp  Logger.h  MathUtils.h  StringUtils.h  Timer.cpp  Timer.h
src/utils/lib/snprintf/: snprintf.c
